# calendlyai

./: .gitignore  README.md  a.ipynb  a.py  book.py  book2.py  bright_data.py  calendly_complete_workflow.ipynb  calendly_continuous_workflow.py  cli.py  enhanced_scrape.py  main.py  play.py  pyproject.toml  recaptcha.py  run.py  scrape.py  scrape2.py  test.py
browser/: browserbase_handler.py
config/: settings.py
eval/: summary.json  summary_20250305.json  summary_20250306.json  workflow_results_20250305.json  workflow_results_20250306.json
models/: data_models.py
prompts/: scheduling_prompts.py
random/: calendly_complete_workflow copy.ipynb  calendly_complete_workflow.ipynb
results/: calendly_test_results_20250315_181712.json  calendly_test_results_20250315_181726.json  calendly_test_results_20250315_181745.json  calendly_test_results_20250315_181801.json  calendly_test_results_20250315_181813.json  calendly_test_results_20250315_182044.json  calendly_test_results_20250315_182058.json  calendly_test_results_20250315_182356.json  calendly_test_results_20250315_182410.json  calendly_test_results_20250315_182423.json  calendly_test_results_20250315_182535.json  calendly_test_results_20250315_182550.json  calendly_test_results_20250315_182604.json  calendly_test_results_20250315_182821.json  calendly_test_results_20250315_182835.json  calendly_test_results_20250315_182851.json  calendly_test_results_20250315_182905.json  calendly_test_results_20250315_182920.json  calendly_test_results_20250315_182934.json  calendly_test_results_20250315_182947.json  calendly_test_results_20250315_183000.json  calendly_test_results_20250315_183201.json  calendly_test_results_20250315_183228.json  calendly_test_results_20250315_183713.json  calendly_test_results_20250315_183727.json  calendly_test_results_20250315_183740.json  calendly_test_results_20250315_183759.json  calendly_test_results_20250315_183813.json  calendly_test_results_20250315_183827.json  calendly_test_results_20250315_183841.json  (+7 more)
solutions/: hyper.py  (+3 more)
(+36 files in other folders)
