[tool.poetry]
name = "calendly"
version = "0.1.0"
description = "Calendly Booking System"
authors = ["User"]
readme = "README.md"

[tool.poetry.dependencies]
python = "^3.9"
pytz = "^2025.2"
requests = "^2.32.3"
langchain = "^0.3.21"
langchain-community = "^0.3.20"
langchain-openai = ">=0.0.2"
selenium = "^4.30.0"
webdriver-manager = "^4.0.2"
twocaptcha = "^0.0.1"
browserbase = "^1.2.0"


[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
